--- a/作品.html
+++ b/作品.html
@@ -10,44 +10,44 @@
 <body>
 	<nav>
         <div class="close">关闭</div>
-		<p class="one">首页</p>
-		<p>作品</p>
-		<p>日记</p>
-		<p>联系</p>
+		<a href="首页.html"><p class="one">首页</p></a>
+		<a href="作品.html"><p>作品</p></a>
+		<a href="日记.html"><p>日记</p></a>
+		<a href="联系.html"><p>联系</p></a>
 	</nav>
 	<div class="lp">
 		<ul class="row">
 			<li class="col-xs-10 col-xs-offset-1 col-md-4">
-			    <div class="pic"><div class="add"></div></div>
+			    <a href="分类.html"><div class="pic"><div class="add"></div></div>
 			    <img src="img/8.jpg" alt="">
-			    <p>作品分类1</p>
+			    <p>作品分类1</p></a>
 			</li>
 			
 			<li class="col-xs-10 col-xs-offset-1 col-md-4">
-			<div class="pic"><div class="add"></div></div>
+			    <a href="分类.html"><div class="pic"><div class="add"></div></div>
 			    <img src="img/9.jpg" alt="">
-			    <p>作品分类2</p>
+			    <p>作品分类2</p></a>
 			</li>
 			
 			<li class="col-xs-10 col-xs-offset-1 col-md-4">
-			<div class="pic"><div class="add"></div></div>
+			    <a href="分类.html"><div class="pic"><div class="add"></div></div>
 			    <img src="img/10.jpg" alt="">
-			    <p>作品分类3</p>
+			    <p>作品分类3</p></a>
 			</li>
 			<li class="col-xs-10 col-xs-offset-1 col-md-4">
-			<div class="pic"><div class="add"></div></div>
+			    <a href="分类.html"><div class="pic"><div class="add"></div></div>
 			    <img src="img/11.jpg" alt="">
-			    <p>作品分类4</p>
+			    <p>作品分类4</p></a>
 			</li>
 			<li class="col-xs-10 col-xs-offset-1 col-md-4">
-			<div class="pic"><div class="add"></div></div>
+			    <a href="分类.html"><div class="pic"><div class="add"></div></div>
 			    <img src="img/12.jpg" alt="">
-			    <p>作品分类5</p>
+			    <p>作品分类5</p></a>
 			</li>
 			<li class="col-xs-10 col-xs-offset-1 col-md-4">
-			<div class="pic"><div class="add"></div></div>
+			    <a href="分类.html"><div class="pic"><div class="add"></div></div>
 			    <img src="img/13.jpg" alt="">
-			    <p>作品分类6</p>
+			    <p>作品分类6</p></a>
 			</li>
 		</ul>
 	</div>
