--- a/内容.html
+++ b/内容.html
@@ -8,10 +8,10 @@
 <body>
 	<nav>
         <div class="close">关闭</div>
-		<p class="one">首页</p>
-		<p>作品</p>
-		<p>日记</p>
-		<p>联系</p>
+		<a href="首页.html"><p class="one">首页</p></a>
+		<a href="作品.html"><p>作品</p></a>
+		<a href="日记.html"><p>日记</p></a>
+		<a href="联系.html"><p>联系</p></a>
 	</nav>
 	<div class="rj">
 		<div class="pic"><img src="img/5.jpg" alt=""></div>
