--- a/分类.html
+++ b/分类.html
@@ -9,48 +9,48 @@
 <body>
     <nav>
         <div class="close">关闭</div>
-		<p class="one">首页</p>
-		<p>作品</p>
-		<p>日记</p>
-		<p>联系</p>
+		<a href="首页.html"><p class="one">首页</p></a>
+		<a href="作品.html"><p>作品</p></a>
+		<a href="日记.html"><p>日记</p></a>
+		<a href="联系.html"><p>联系</p></a>
 	</nav>
 	<div class="center">
 		<ul compact="row">
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/11.jpg" alt="">
-				<p>作品01</p>
+				<a href="查看.html"><img src="img/11.jpg" alt="">
+				<p>作品01</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/12.jpg" alt="">
-				<p>作品02</p>
+				<a href="查看.html"><img src="img/12.jpg" alt="">
+				<p>作品02</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/13.jpg" alt="">
-				<p>作品03</p>
+				<a href="查看.html"><img src="img/13.jpg" alt="">
+				<p>作品03</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/14.jpg" alt="">
-				<p>作品04</p>
+				<a href="查看.html"><img src="img/14.jpg" alt="">
+				<p>作品04</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/15.jpg" alt="">
-				<p>作品05</p>
+				<a href="查看.html"><img src="img/15.jpg" alt="">
+				<p>作品05</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/16.jpg" alt="">
-				<p>作品06</p>
+				<a href="查看.html"><img src="img/16.jpg" alt="">
+				<p>作品06</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/17.jpg" alt="">
-				<p>作品07</p>
+				<a href="查看.html"><img src="img/17.jpg" alt="">
+				<p>作品07</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/18.jpg" alt="">
-				<p>作品08</p>
+				<a href="查看.html"><img src="img/18.jpg" alt="">
+				<p>作品08</p></a>
 			</li>
 			<li class="col-xs-6 col-sm-4 col-md-4">
-				<img src="img/19.jpg" alt="">
-				<p>作品09</p>
+				<a href="查看.html"><img src="img/19.jpg" alt="">
+				<p>作品09</p></a>
 			</li>
 		</ul>
 	</div>
