--- a/查看.html
+++ b/查看.html
@@ -82,6 +82,7 @@
     banner_oi(imgs,dots,banner,leftBtn,rightBtn,widths,"active",1000);
     close.onclick=function(){
     	window.close();
+    	window.open("分类.html");
     }
 </script>
 </body>
