--- a/登录.html
+++ b/登录.html
@@ -39,6 +39,7 @@
         }
         close.onclick=function(){
                 window.close();
+                window.open("首页.html");
         }
 }
 </script>
