--- a/日记.html
+++ b/日记.html
@@ -10,10 +10,10 @@
 <body>
 	<nav>
         <div class="close">关闭</div>
-		<p class="one">首页</p>
-		<p>作品</p>
-		<p>日记</p>
-		<p>联系</p>
+		<a href="首页.html"><p class="one">首页</p></a>
+		<a href="作品.html"><p>作品</p></a>
+		<a href="日记.html"><p>日记</p></a>
+		<a href="联系.html"><p>联系</p></a>
 	</nav>
 	<div class="rj">
 		<div class="top">博客日记</div>
@@ -21,10 +21,10 @@
 		<div class="bk">
 			<ul>
 				<li>
-					<h2>博客日记#20</h2>
+					<a href="内容.html"><h2>博客日记#20</h2>
 				    <h6>发布日期：2016.07.04</h6>
 				    <h4>藝術可遇不可求--它不會因為你是平民而對你視若無睹，也不會因為你是王公而對你青眼有加。天時未到，即使是最睿智的人也不能使藝術品誕生。夳夵壱売壳圢圤圥圦圧圩圪咍，壱売壳圢圤怅怆怐，怗怘怙怚怛怞怟怡怢怣怤怦怩怭夳夵壱売壳圢圤圥夲夳夵壱売壳。恀夳夵壱売壳圢圤圥夲夳夵壱売壳恍恎恏。恒恔恖恘恙恜恧恬恺，恽夳夵壱売壳圢圤圥夲夳夵壱売壳。夲夳夵壱売壳圢圤圥夲夳夵壱売壳夳夵壱売壳圢圤圥夲夳夵壱圤圥夲夳夵壱売夳夵壱売壳圢圤圥夲夳夵壱売圤圥夲夳夵壱。</h4>
-				    <a href="">阅读正文</a>
+				    <a href="">阅读正文</a></a>
 				</li>
 				<li></li>
 				<li></li>
